# github-etl

./: Dockerfile  Makefile  README.md  cmd.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yaml
k8s/app/: deployment.yaml
src/: configuration.py  database.py  dependency.py  main.py  models.py  repository.py  runserver.py  schema.py
src/endpoints/: repositories.py
